# MC-MSA

./: .gitignore  BENCHMARK_GUIDE.md  MC-MSA v2.5.code-workspace  MC_MSA_GUIDE.md  README.md  analyze_single_track.py  comparar_clasificadores.py  dataset_academic.csv  dataset_popular.csv  extraer_nya.py  pyproject.toml  rename_classical_dataset.py  run_benchmark.py  run_mc_msa.py  run_mc_msa_beta.py  run_mc_msa_optuna.py  run_melody_benchmark.py  run_melody_benchmark_optuna.py  run_metrics_only.py  run_tiny_benchmark.py  run_tiny_mc_msa.py  test.py  thesis_draft.txt  visualizar_comparativa_paper.py  visualizar_melodia_paper.py  visualizar_melodia_v2.py  visualizar_par.py  visualize_comparison.py
examples/: visualizar_melodia_v2.py
src/melody_analysis/: __init__.py  __main__.py  classifier.py  features.py  pipeline.py  segmenter.py  visualization.py
src/melody_analysis_v2/: __init__.py  __main__.py  analyze_single.py  classifier.py  classifier_paper.py  classifier_paper_v2.py  classifier_thesis.py  classifier_thesis_beta.py  classifier_v1_rules.py  exporter.py  features.py  pipeline.py  rmvpe_onnx.py  segmenter.py  segmenter_beta.py  synthesis.py  visualization.py
src/melody_analysis_v2/fcn_f0_src/: prediction.py
tests/: test_synthetic.py  test_synthetic_v2.py
