[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "melody-analysis"
version = "0.1.0"
description = "Herramientas para segmentar y clasificar la estructura melódica"
authors = [{name = "Music Analyst"}]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "librosa",
    "soundfile",
    "matplotlib",
    "crepe",
]

[project.optional-dependencies]
dev = ["pytest"]
optuna = ["optuna"]
advanced = [
    "torch",
    "torchaudio",
    "demucs",
    "onnxruntime",
    "basic-pitch",
    "bs-roformer-infer",
    "ml-collections",
    "pyyaml",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
